--- a/Views/index1.html
+++ b/Views/index1.html
@@ -300,37 +300,28 @@
             <div class="col-sm-5">
               <h3 style="padding-bottom: 2%;font-size: medium;color: black;">Category</h3>
               <div class="card" style="margin-left: 15%; margin-top: 4%;margin-bottom: 5%; box-shadow: 0px 0px 20px #c7c6c6;">
+                <input type="text" id="name" name="name" required
+                minlength="4" maxlength="8" size="10" placeholder="^                 Company Registrations" style="padding-bottom: 3.5%; padding-top: 3%;padding-left: 3%;border: none;outline: none;">
                 
                
-                  <button style="border: none;outline: none;display: inline-block;background-color: white;padding-top: 2%;padding-bottom: 3%;">
+                
                  
-                 <span style="float: left;"><svg
-                  width="1em"
-                  height="1em"
-                  viewBox="0 0 16 16"
-                  class="bi bi-chevron-expand"
-                  fill="currentColor"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M3.646 9.146a.5.5 0 0 1 .708 0L8 12.793l3.646-3.647a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 0-.708zm0-2.292a.5.5 0 0 0 .708 0L8 3.207l3.646 3.647a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 0 0 0 .708z"
-                  /> </svg></span> <span style="float: right;">Company Registrations</span> </button> 
+               
                
               </div>
               <h3 style="padding-bottom: 2%;font-size: medium;color: black;">Icon</h3>
+            
               <div class="card" style="margin-left: 15%; margin-top: 3%;box-shadow: 0px 0px 20px #c7c6c6;">
-                <button style="border: none;outline: none;display: inline-block;background-color: white;padding-top: 2%;padding-bottom: 3%;">
-             <span style="float: left;"><svg width="1em" height="1em" viewBox="0 0 16 16" style="margin-left: -5%;" class="bi bi-arrow-down-short" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" d="M4.646 7.646a.5.5 0 0 1 .708 0L8 10.293l2.646-2.647a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 0 1 0-.708z"/>
-              <path fill-rule="evenodd" d="M8 4.5a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5z"/>
-            </svg></span>   
-               <span style="float: right;">Add icon from icon8</span>  </button>
+            
+            <input type="text" id="name" name="name" required
+            minlength="4" maxlength="8" size="10" placeholder="↓                     Add icon from icon8" style="padding-bottom: 3.5%; padding-top: 3%;padding-left: 3%;border: none;outline: none;">
+            
               </div>
               <h3 style="padding-bottom: 2%;font-size: medium;color: black;">Card Name</h3>
-              <div class="card" style="margin-left: 15%; margin-top: 3%;background-color: #f3f3f3;">
-               
-                <span style="padding-bottom: 3.5%; padding-top: 3%;padding-left: 3%;">Limited Liability firm</span>
+              <div class="card" style="margin-left: 15%; margin-top: 3%;">
+                <input type="text" id="name" name="name" required
+                minlength="4" maxlength="8" size="10" placeholder="Limited Liability firm" style="padding-bottom: 3.5%; padding-top: 3%;padding-left: 3%;background-color: #f3f3f3;border: none;outline: none;">
+                
               </div>
             </div>
 
@@ -347,16 +338,9 @@
                 "
               >
                 <div class="card-body">
-                  <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum -->
-                  <input type="text" placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum" >
+                  <textarea type="text" id="name" name="name" required
+                   placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamc laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum" style="height: 6cm; background-color: #f3f3f3;border: none;outline: none;">
+                 </textarea>
                 </div>
               </div>
              
